zellij-integration-tests/tests/snapshots/tabs__tab_bar_order_matches_position_after_closing_middle_tab.snap
---
source: zellij-integration-tests/tests/tabs.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #3  Tab #2  + 
$ threethree█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
