zellij-integration-tests/tests/snapshots/tabs__tab_order_survives_detach_and_reattach.snap
---
source: zellij-integration-tests/tests/tabs.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #3  Tab #1  Tab #2  + 
$ threethree█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
